--- a/teaching.html
+++ b/teaching.html
@@ -1,7 +1,102 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />    <meta name="description" content="Lei Li" />    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />    <meta name="author" content="Lei Li" />    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->    <title>Lei LI's Talks and Tutorials</title>  </head>  <body class="blue light">    <div id="layout">      <ul class="menu">        <li><a href="index.html">Home</a></li>        <li><a href="student.html">Student</a></li>        <li><a href="research.html">Research</a></li>        <li class="active"><a href="teaching.html">Teaching</a></li>        <li><a href="pubs.html">Publication</a></li>        <li><a href="resource.html">Resource</a></li>        <li><a href="media.html">Media</a></li>        <li><a href="leili-bio.html">Bio</a></li>        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>      </ul>      <div class="row">        <div class="main col">          <h1>Teaching</h1>          <ul>            <li><a href="course/ml22fa/index.html">CS291K Machine Learning                (graduate, Fall 2022)<br />              </a></li>            <li><a href="course/mldl22w/index.html"> CS165B Machine Learning                (undergrad, Winter 2022) - focus on deep learning</a> </li>            <li><a href="course/dl4mt21fa/index.html">CS291K Deep Learning for                Machine Translation (graduate, Fall 2021)</a> </li>          </ul>          <h1>Tutorial</h1>          <ul>            <li><a href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
-                Tutorial: Pre-training methods for Neural Machine Translation</a></li>            <li><a href="TALKS/2019-EMNLP">EMNLP 2019 Tutorial on Discreteness                in NLP</a>. </li>            <li> <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep                Generative Models for Text Generation</a>. Dunhuang, China,              2019. by Hao Zhou and Lei Li.</li>            <li>CCF-ADL/NLPCC 2016 Tutorial on Deep Learning for Question              Answering. Kunming, China, December 2020. [<a href="TALKS/Deep%20Learning%20for%20Answering%20Questions%20-%20leili%20-%20NLPCC%20-%20ADL%202016.pdf">Slides</a>]</li>            <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
-                on BLOG</a> . </li>            <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a></li>          </ul>          <h1>Talks and Lecture</h1>          <ul>            <li>CCMT 2021 Keynote: Efficient Machine Translation. [<a href="TALKS/EfficientMT-CCMT2021-leili.pdf">Slides</a>]            </li>            <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from              Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>            <li>Recent Advances in Machine Writing and Translation – Algorithms              and Challenges. GTC-China 2020.12.19 (1hr) [<a href="TALKS/Recent%20Advances%20in%20Text%20Generation%20and%20Machine%20Translation%20-%20GTC%20China%20-%20LeiLi%20-%202020.12.19.pdf">Slides</a>]</li>            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Neurips%20meetup%202020.12.06.pdf">Scalable,
-                Controllable, and Interpretable Machine Learning for Natural                Language Generation</a>. NeurIPS 2020 Beijing Meetups.              2020.12.06 (30 mins).</li>            <li><a href="TALKS/Constrained%20Text%20Generation%20Monte-Carlo%20Meets%20Neural%20Nets-2020.10.8.pdf">Constrained
-                Text Generation - Monte Carlo Meets Neural Nets</a>. Tsinghua              University. IIIS. 2020.10.8 (1hr)</li>            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Tsinghua%202020.10.8.pdf">Scalable,
-                Controllable and Interpretable Machine Learning for Natural                Language Generation.</a> Tsinghua University, Guest Lectures at              IIIS Undergrad class 2020.10.8. (1.5 hrs) </li>            <li>ICLR 2020 Talk on Learning Deep Latent Models for Text              Sequences. [<a href="https://iclr.cc/virtual_2020/expo_2.html">Video</a>]              [<a href="TALKS/learning%20deep%20latent%20models%20for%20text%20sequences%20-%20ICLR%202020.pdf">Slides</a>]            </li>            <li>BLOG language and compiled inference. Computer Science              department, Stanford University, Tsinghua University, 2015.<br />            </li>            <li>2015 Invited Keynote at China Computer Federation Young Computer              Scientists and Engineers Forum: Deep Learning – Towards More              Intelligent Machines.<br />            </li>            <li> 2013 TAMU <a href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
-                Bowl Seminar</a> </li>            <li> Parsimonious Linear Fingerprinting for time series, Machine              learning lunch seminar, CMU, Nov, 2010. [ <a href="TALKS/plif-mltalk2010.pdf">PPT</a>              ] <br />            </li>            <li> Fast Algorithms for Mining Co-evolving Time Series. SMU, NUS,              SJTU, Dec 2009. [ <a href="TALKS/leili-talk09-SMU.pdf">PPT</a> ]            </li>            <li> Fast Algorithms for Mining and Summarizing Co-evolving              Sequences, HKUST. 2009.[ <a href="http://www.cse.ust.hk/pg/seminars/F09/li.html">Poster</a>              ] </li>            <li> Machine Learning Lunch seminar, CMU, Oct 6, 2008. [ <a href="docs/li-mllunch08.pdf">PPT</a>              ] </li>          </ul>        </div>      </div>    </div>  </body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="description" content="Lei Li" />
+    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />
+    <meta name="author" content="Lei Li" />
+    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
+    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
+    <title>Lei LI's Talks and Tutorials</title>
+  </head>
+  <body class="blue light">
+    <div id="layout">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="student.html">Student</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li class="active"><a href="teaching.html">Teaching</a></li>
+        <li><a href="pubs.html">Publication</a></li>
+        <li><a href="resource.html">Resource</a></li>
+        <li><a href="media.html">Media</a></li>
+        <li><a href="leili-bio.html">Bio</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+      </ul>
+      <div class="row">
+        <div class="main col">
+          <h1>Teaching</h1>
+          <ul>
+            <li><a href="course/dl23w/">CS190I Deep Learning (undergrad, Winter 2023)</a></li>
+            <li><a href="course/ml22fa/index.html">CS291K Machine Learning
+                (graduate, Fall 2022)<br />
+              </a></li>
+            <li><a href="course/mldl22w/index.html"> CS165B Machine Learning
+                (undergrad, Winter 2022) - focus on deep learning</a> </li>
+            <li><a href="course/dl4mt21fa/index.html">CS291K Deep Learning for
+                Machine Translation (graduate, Fall 2021)</a> </li>
+          </ul>
+          <h1>Tutorial</h1>
+          <ul>
+            <li><a href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
+                Tutorial: Pre-training methods for Neural Machine Translation</a></li>
+            <li><a href="TALKS/2019-EMNLP">EMNLP 2019 Tutorial on Discreteness
+                in NLP</a>. </li>
+            <li> <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep
+                Generative Models for Text Generation</a>. Dunhuang, China,
+              2019. by Hao Zhou and Lei Li.</li>
+            <li>CCF-ADL/NLPCC 2016 Tutorial on Deep Learning for Question
+              Answering. Kunming, China, December 2020. [<a href="TALKS/Deep%20Learning%20for%20Answering%20Questions%20-%20leili%20-%20NLPCC%20-%20ADL%202016.pdf">Slides</a>]</li>
+            <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
+                on BLOG</a> . </li>
+            <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a></li>
+          </ul>
+          <h1>Talks and Lecture</h1>
+          <ul>
+            <li>CCMT 2021 Keynote: Efficient Machine Translation. [<a href="TALKS/EfficientMT-CCMT2021-leili.pdf">Slides</a>]
+            </li>
+            <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from
+              Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>
+            <li>Recent Advances in Machine Writing and Translation – Algorithms
+              and Challenges. GTC-China 2020.12.19 (1hr) [<a href="TALKS/Recent%20Advances%20in%20Text%20Generation%20and%20Machine%20Translation%20-%20GTC%20China%20-%20LeiLi%20-%202020.12.19.pdf">Slides</a>]</li>
+            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Neurips%20meetup%202020.12.06.pdf">Scalable,
+                Controllable, and Interpretable Machine Learning for Natural
+                Language Generation</a>. NeurIPS 2020 Beijing Meetups.
+              2020.12.06 (30 mins).</li>
+            <li><a href="TALKS/Constrained%20Text%20Generation%20Monte-Carlo%20Meets%20Neural%20Nets-2020.10.8.pdf">Constrained
+                Text Generation - Monte Carlo Meets Neural Nets</a>. Tsinghua
+              University. IIIS. 2020.10.8 (1hr)</li>
+            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Tsinghua%202020.10.8.pdf">Scalable,
+                Controllable and Interpretable Machine Learning for Natural
+                Language Generation.</a> Tsinghua University, Guest Lectures at
+              IIIS Undergrad class 2020.10.8. (1.5 hrs) </li>
+            <li>ICLR 2020 Talk on Learning Deep Latent Models for Text
+              Sequences. [<a href="https://iclr.cc/virtual_2020/expo_2.html">Video</a>]
+              [<a href="TALKS/learning%20deep%20latent%20models%20for%20text%20sequences%20-%20ICLR%202020.pdf">Slides</a>]
+            </li>
+            <li>BLOG language and compiled inference. Computer Science
+              department, Stanford University, Tsinghua University, 2015.<br />
+            </li>
+            <li>2015 Invited Keynote at China Computer Federation Young Computer
+              Scientists and Engineers Forum: Deep Learning – Towards More
+              Intelligent Machines.<br />
+            </li>
+            <li> 2013 TAMU <a href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
+                Bowl Seminar</a> </li>
+            <li> Parsimonious Linear Fingerprinting for time series, Machine
+              learning lunch seminar, CMU, Nov, 2010. [ <a href="TALKS/plif-mltalk2010.pdf">PPT</a>
+              ] <br />
+            </li>
+            <li> Fast Algorithms for Mining Co-evolving Time Series. SMU, NUS,
+              SJTU, Dec 2009. [ <a href="TALKS/leili-talk09-SMU.pdf">PPT</a> ]
+            </li>
+            <li> Fast Algorithms for Mining and Summarizing Co-evolving
+              Sequences, HKUST. 2009.[ <a href="http://www.cse.ust.hk/pg/seminars/F09/li.html">Poster</a>
+              ] </li>
+            <li> Machine Learning Lunch seminar, CMU, Oct 6, 2008. [ <a href="docs/li-mllunch08.pdf">PPT</a>
+              ] </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
