adding links and aaai23 paper

--- a/pubs.html
+++ b/pubs.html
@@ -66,11 +66,11 @@
             <!-- Add topic values here -->
             <option value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation|simultaneous translation">Machine Translation</option>
             <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation|story generation|story editing|story rewriting">Text Generation</option>
-            <option value="question answering|machine reading comprehension|reasoning|fact verification">Question Answering</option>
+            <option value="question answering|machine reading comprehension|reasoning|fact verification">Reasoning and Question Answering</option>
             <option value="information extraction|relation extraction|entity extraction|taxonomy completion|exent extraction|entity linking">Information Extraction</option>
             <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">Probabilistic Modelling and Inference</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
-            <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning|vision and language">Computer Vision</option>
+            <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|video captioning|vision and language">Computer Vision</option>
             <option value="manipulation|grasp pose estimation|construct bridge|design and construction">Robotics</option>
           </select>
         </div>
