--- a/student.html
+++ b/student.html
@@ -1,5 +1,55 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />    <meta name="description" content="Lei Li" />    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />    <meta name="author" content="Lei Li" />    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->    <title>Lei LI's Software</title>  </head>  <body class="blue light">    <div id="layout">      <ul class="menu">        <li><a href="index.html">Home</a></li>        <li class="active"><a href="student.html">Student</a></li>        <li><a href="research.html">Research</a></li>        <li><a href="teaching.html">Teaching</a></li>        <li><a href="pubs.html">Publication</a></li>        <li><a href="resource.html">Resource</a></li>        <li><a href="media.html">Media</a></li>        <li><a href="leili-bio.html">Bio</a></li>        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>      </ul>      <div class="row">        <div class="main col">          <h1> PhD Student </h1>          <ul>            <li>Siqi Ouyang</li>            <li><a href="">Wenda Xu</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Ewilliam/">William
-                Wang</a>)</li>            <li><a href="https://xuandongzhao.github.io">Xuandong Zhao</a>              (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Eyuxiangw/">Yu-Xiang
-                Wang</a>)</li>            <li><a href="https://dqwang122.github.io/">Danqing Wang</a></li>            <li>Zhenqiao Song</li>            <li>Kexun Zhang (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Ewilliam/">William
-                Wang</a>)</li>            <li>Yujian Liu (co-advise with Prof. <a href="https://code-terminator.github.io/">Shiyu
-                Chang</a>)</li>          </ul>          <h1>Interns</h1>          <ul>            <li>Jiangjie Chen</li>            <li>Saisidharth Majeti</li>            <li>Ahmed Elkordy</li>            <li>Qingxiu Dong</li>          </ul>          <p><br />          </p>        </div>      </div>    </div>  </body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="description" content="Lei Li" />
+    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />
+    <meta name="author" content="Lei Li" />
+    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
+    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
+    <title>Lei LI's Software</title>
+  </head>
+  <body class="blue light">
+    <div id="layout">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="student.html">Student</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="pubs.html">Publication</a></li>
+        <li><a href="resource.html">Resource</a></li>
+        <li><a href="media.html">Media</a></li>
+        <li><a href="leili-bio.html">Bio</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+      </ul>
+      <div class="row">
+        <div class="main col">
+          <h1> PhD Student </h1>
+          <ul>
+            <li>Siqi Ouyang</li>
+            <li><a href="https://xu1998hz.github.io">Wenda Xu</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Ewilliam/">William
+                Wang</a>)</li>
+            <li><a href="https://xuandongzhao.github.io">Xuandong Zhao</a>
+              (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Eyuxiangw/">Yu-Xiang
+                Wang</a>)</li>
+            <li><a href="https://dqwang122.github.io/">Danqing Wang</a></li>
+            <li><a href="https://jocelynsong.github.io">Zhenqiao Song</a></li>
+            <li><a href="https://zkx06111.github.io">Kexun Zhang</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Ewilliam/">William
+                Wang</a>)</li>
+            <li><a href="https://yujianll.github.io">Yujian Liu</a> (co-advise with Prof. <a href="https://code-terminator.github.io/">Shiyu
+                Chang</a>)</li>
+          </ul>
+          <h1>Interns</h1>
+          <ul>
+            <li>Jiangjie Chen</li>
+            <li>Saisidharth Majeti</li>
+            <li>Ahmed Elkordy</li>
+            <li>Qingxiu Dong</li>
+          </ul>
+          <p><br />
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
