adding ieee mt talk

--- a/teaching.html
+++ b/teaching.html
@@ -45,33 +45,34 @@
                 Generative Models for Text Generation</a>. Dunhuang, China,
               2019. by Hao Zhou and Lei Li.</li>
             <li>CCF-ADL/NLPCC 2016 Tutorial on Deep Learning for Question
-              Answering. Kunming, China, December 2020. [<a href="TALKS/Deep%20Learning%20for%20Answering%20Questions%20-%20leili%20-%20NLPCC%20-%20ADL%202016.pdf">Slides</a>]</li>
-            <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
-                on BLOG</a> . </li>
+              Answering. Kunming, China, December 2020. [<a href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slides</a>]</li>
+            <li>2014 PPAML Summer School Tutorial: <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">Probabilistic Modeling using Bayesian Logic (BLOG)
+                </a> . </li>
             <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a></li>
           </ul>
           <h1>Talks and Lecture</h1>
           <ul>
+            <li>IEEE Central Coast Talk: <a href="TALKS/MTIntro2022-leili.pdf"> Breaking Language Barriers with Neural Machine Translation.</a> 2022.8.17  </li>
             <li>CCMT 2021 Keynote: Efficient Machine Translation. [<a href="TALKS/EfficientMT-CCMT2021-leili.pdf">Slides</a>]
             </li>
             <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from
-              Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>
-            <li>Recent Advances in Machine Writing and Translation – Algorithms
-              and Challenges. GTC-China 2020.12.19 (1hr) [<a href="TALKS/Recent%20Advances%20in%20Text%20Generation%20and%20Machine%20Translation%20-%20GTC%20China%20-%20LeiLi%20-%202020.12.19.pdf">Slides</a>]</li>
-            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Neurips%20meetup%202020.12.06.pdf">Scalable,
+              Research to Product Innovation. [<a href="TALKS/speech_translation_gaitc_leili_2021.6.6.pdf">Slides</a>]</li>
+            <li>GTC Talk 2020: Recent Advances in Machine Writing and Translation – Algorithms
+              and Challenges. [<a href="TALKS/recent_advances_in_text_generation_and_machine_translation_gtc_china_leili_2020.12.19.pdf">Slides</a>]</li>
+            <li>NeurIPS 2020 Beijing Meetups: <a href="TALKS/interpretable_machine_learning_for_NLG_neurips_meetup_2020.12.06.pdf">Scalable,
                 Controllable, and Interpretable Machine Learning for Natural
-                Language Generation</a>. NeurIPS 2020 Beijing Meetups.
+                Language Generation</a>. 
               2020.12.06 (30 mins).</li>
-            <li><a href="TALKS/Constrained%20Text%20Generation%20Monte-Carlo%20Meets%20Neural%20Nets-2020.10.8.pdf">Constrained
+            <li><a href="TALKS/constrained_text_generation_monte_carlo_meets_neural_nets_2020.10.8.pdf">Constrained
                 Text Generation - Monte Carlo Meets Neural Nets</a>. Tsinghua
               University. IIIS. 2020.10.8 (1hr)</li>
-            <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Tsinghua%202020.10.8.pdf">Scalable,
+            <li><a href="TALKS/interpretable_machine_learning_for_nlg_tsinghua_2020.10.8.pdf">Scalable,
                 Controllable and Interpretable Machine Learning for Natural
                 Language Generation.</a> Tsinghua University, Guest Lectures at
               IIIS Undergrad class 2020.10.8. (1.5 hrs) </li>
             <li>ICLR 2020 Talk on Learning Deep Latent Models for Text
               Sequences. [<a href="https://iclr.cc/virtual_2020/expo_2.html">Video</a>]
-              [<a href="TALKS/learning%20deep%20latent%20models%20for%20text%20sequences%20-%20ICLR%202020.pdf">Slides</a>]
+              [<a href="TALKS/learning_deep_latent_models_for_text_sequences_iclr2020.pdf">Slides</a>]
             </li>
             <li>BLOG language and compiled inference. Computer Science
               department, Stanford University, Tsinghua University, 2015.<br />
