--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <div class="tab-pane active" id="news">
               <ul>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> 
+                  5 new papers accepted to ACL 2023.
+                </li>
+                <li><img src="images/new-icon.gif" style="height:1.2em" /> 
+                  3 new papers accepted to ICML 2023.
+                </li>
+                <li><img src="images/new-icon.gif" style="height:1.2em" /> 
                   New papers at EMNLP 2022: <a href="https://arxiv.org/abs/2210.03312">Model Protection</a>
                   <a href="https://arxiv.org/abs/2210.03329">Model correction on factual knowledge</a>, 
                   <a href="https://arxiv.org/abs/2210.05035">Unsupervised Text Generation Metric - SEScore</a>.
