update bib and index

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <li> Machine translation, speech translation, multilingual NLP. </li>
             <li> Text generation and summarization. </li>
             <li> Reasoning and question answering. </li>
-            <li> Information extraction. </li>
+            <li> LLM for Program Synthesis </li>
             <li> AI for drug discovery </li>
             <li> Green and Efficient ML </li>
-            <li>Time series mining and prediction </li>
+            <li> Time series mining and prediction </li>
             <li> Probabilistic inference, Bayesian sampling methods </li>
           </ul>
           <p></p>
@@ -82,10 +82,13 @@
             <div class="tab-pane active" id="news">
               <ul>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> 
-                  5 new papers accepted to ACL 2023.
+                  New paper about <a href="https://arxiv.org/abs/2212.09450">designing peptides to kill bacteria</a> is accepted to KDD 2023. 
                 </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> 
-                  3 new papers accepted to ICML 2023.
+                  5 new papers are accepted to ACL 2023. Topics include <a href="https://arxiv.org/abs/2212.09359">Speech Translation</a>, <a href="https://arxiv.org/abs/2212.09305">Evaluation metric SEScore2</a>, <a href="https://arxiv.org/abs/2212.10551">Machine translation for 440 languages</a>, <a href="https://arxiv.org/abs/2212.06950">Zero-shot LLM</a>, <a href="https://arxiv.org/abs/2305.05976">Negative Knowledge in LLM</a>.
+                </li>
+                <li><img src="images/new-icon.gif" style="height:1.2em" /> 
+                  3 new papers are accepted to ICML 2023. Topics include <a href="https://arxiv.org/abs/2305.00386">Watermark for Language Generation</a>, <a href="https://arxiv.org/abs/2302.03162">Speed up Diffusion</a>, <a href="https://arxiv.org/abs/2302.02285">Protein Design</a>.
                 </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> 
                   New papers at EMNLP 2022: <a href="https://arxiv.org/abs/2210.03312">Model Protection</a>
@@ -213,7 +216,19 @@
                   Dunhuang, China. </li>
               </ul>
             </div>
-            <div class="tab-pane" id="papers"> under construction ... </div>
+            <div class="tab-pane" id="papers"> 
+              <ul>
+                <li>
+                  CGMH: A method for controllable text generation from specified keywords. [<a href="https://arxiv.org/abs/1811.10996">arxiv</a>]
+                </li>
+                <li>
+                  Analyzing anisotropic sentence embeddings from pre-trained language models. [<a href="https://arxiv.org/abs/2011.05864">arxiv</a>]
+                </li>
+                <li>
+                  <img src="mrasp-logo.png" style="height:1.6em"/> <a href="pubs/lin2020pre.pdf">mRASP</a> and <a href="pubs/pan2021contrastive.pdf">mRASP2</a>: Data-efficient methods for many-to-many neural machine translation.  
+                </li>
+              </ul>  
+            </div>
           </div>
         </div>
         <!-- <div class="main col" style="overflow-y: scroll; max-height: 24em;">
