adding recent papers

--- a/index.html
+++ b/index.html
@@ -225,8 +225,16 @@
                   Analyzing anisotropic sentence embeddings from pre-trained language models. [<a href="https://arxiv.org/abs/2011.05864">arxiv</a>]
                 </li>
                 <li>
-                  <img src="mrasp-logo.png" style="height:1.6em"/> <a href="pubs/lin2020pre.pdf">mRASP</a> and <a href="pubs/pan2021contrastive.pdf">mRASP2</a>: Data-efficient methods for many-to-many neural machine translation.  
+                  <img src="mrasp-logo.png" style="height:1.6em"/> Data-efficient methods for many-to-many neural machine translation. [<a href="pubs/lin2020pre.pdf">mRASP</a>, <a href="pubs/pan2021contrastive.pdf">mRASP2</a>]
                 </li>
+                <li>
+                  Glancing Transformer (GLAT): non-autoregressive translation models are equally good as autoregressive Transformer. [<a href="https://arxiv.org/abs/2008.07905">arxiv</a>]
+                </li>
+                <li>VOLT: Learning vocabulary via optimal transport (ACL 2021 Best Paper). [<a href="https://arxiv.org/abs/2012.15671">arxiv</a>] </li>
+                <li>
+                  SOLO: Fast and accurate object instance segmentation. [<a href="https://arxiv.org/abs/1912.04488">SOLO</a>, <a href="pubs/wang2020solov2.pdf">SOLOv2</a>] 
+                </li>
+
               </ul>  
             </div>
           </div>
