--- a/resource.html
+++ b/resource.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Lei Li" />
     <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
     <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
-    <title>Lei LI's Software</title>
+    <title>Lei LI's Resource</title>
   </head>
   <body class="blue light">
     <div id="layout">
@@ -27,8 +27,9 @@
           <h1> Software and Toolbox </h1>
           <ul>
             <li><a href="https://github.com/bytedance/lightseq">LightSeq</a>: A
-              High Performance Inference Library for Sequence Modelling,
-              Generation, and Machine Translation. With the custom CUDA
+              High Performance Training and Inference Library for Transformer models. 
+              It is widely used for machine translation, text generation, visual recognition, and more. 
+              With the custom CUDA
               implementation, it achieves 10x speed-up over the original
               tensorflow seq2seq package, and faster than other implementations.
             </li>
