--- a/student.html
+++ b/student.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Lei Li" />
     <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
     <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
-    <title>Lei LI's Software</title>
+    <title>Lei LI's Student</title>
   </head>
   <body class="blue light">
     <div id="layout">
@@ -36,15 +36,22 @@
             <li><a href="https://jocelynsong.github.io">Zhenqiao Song</a></li>
             <li><a href="https://zkx06111.github.io">Kexun Zhang</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/%7Ewilliam/">William
                 Wang</a>)</li>
-            <li><a href="https://yujianll.github.io">Yujian Liu</a> (co-advise with Prof. <a href="https://code-terminator.github.io/">Shiyu
-                Chang</a>)</li>
+          </ul>
+          <h1>Master Student</h1>
+          <ul>
+            <li>Vihaan Akshaay Rajendiran</li>
+            <li>Zihan Ma</li>
           </ul>
           <h1>Interns</h1>
           <ul>
+            <li>Chinmay Dandekar</li>
+            <li>Yufei Song</li>
+            <li>Kaie Chen</li>
+            <li>Tianrui Gu</li>
+            <li>Qingxiu Dong</li>
             <li>Jiangjie Chen</li>
             <li>Saisidharth Majeti</li>
             <li>Ahmed Elkordy</li>
-            <li>Qingxiu Dong</li>
           </ul>
           <p><br />
           </p>
