--- a/teaching.html
+++ b/teaching.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Lei Li" />
     <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
     <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
-    <title>Lei LI's Talks and Tutorials</title>
+    <title>Lei LI's Courses, Talks and Tutorials</title>
   </head>
   <body class="blue light">
     <div id="layout">
